--- a/flaskbook/templates/mail/user/change_email.html
+++ b/flaskbook/templates/mail/user/change_email.html
@@ -1,9 +1,9 @@
 {% extends "mail/base.html" %}
 
 {% block body %}
-<p>Hi {{ user.first_name }} and thanks for registering in Flaskbook!</p>
+<p>We have received a request to change your email.</p>
 
-<p>To confirm your registration, please click on this link: </br>
+<p>To confirm this change, please click on this link: <br />
 {{ config.HOSTNAME }}/confirm/{{ user.username }}/{{ user.change_configuration.confirmation_code }}
 </p>
 {% endblock %}
