añadidos casos test para las funcionalidades de relationship

--- a/flaskbook/templates/base.html
+++ b/flaskbook/templates/base.html
@@ -30,5 +30,8 @@
     <script src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    
+    {% block end_body_js %}{% endblock %}
+    
   </body>
 </html>
