--- a/flaskbook/templates/user/profile.html
+++ b/flaskbook/templates/user/profile.html
@@ -30,12 +30,50 @@
               <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit profile
           </a>
           {% else %}
-          <button type="button" class="btn btn-success">
-            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Friends
-          </button>
+          
+            {% if rel == None %}
+            <a href="{{ url_for('relationship_app.add_friend', to_username=user.username) }}" role="button" id="relationship-add-friend" class="btn btn-default">
+              <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Friend
+            </a>  
+            <a href="{{ url_for('relationship_app.block', to_username=user.username) }}" role="button" class="btn btn-default">
+              <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Block
+            </a>  
+            {% endif %}
+            
+            {% if rel == "BLOCKED" %}
+            <a href="{{ url_for('relationship_app.unblock', to_username=user.username) }}" role="button" id="relationship-blocked" class="btn btn-danger">
+              <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> <span id="relationship-label">Blocked</span>
+            </a>
+            {% endif %}
+            
+            {% if rel == "FRIENDS_APPROVED" %}
+            <a href="{{ url_for('relationship_app.remove_friend', to_username=user.username) }}" role="button" id="relationship-friends" class="btn btn-primary">
+              <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> <span id="relationship-label">Friends</span>
+            </a>
+            {% endif %}
+
+            {% if rel == "FRIENDS_PENDING" %}
+            <a href="{{ url_for('relationship_app.remove_friend', to_username=user.username) }}" role="button" id="relationship-friends-requested" class="btn btn-primary">
+              <span class="glyphicon glyphicon-user" aria-hidden="true"></span> <span id="relationship-label">Friendship Requested</span>
+            </a>
+            {% endif %}
+
+            {% if rel == "REVERSE_FRIENDS_PENDING" %}
+            <a href="{{ url_for('relationship_app.add_friend', to_username=user.username) }}" role="button" id="relationship-reverse-friends-requested" class="btn btn-primary">
+              <span class="glyphicon glyphicon-user" aria-hidden="true"></span> <span id="relationship-label">Accept Friendship</span>
+            </a>
+            <a href="{{ url_for('relationship_app.remove_friend', to_username=user.username) }}" role="button" id="relationship-reverse-friends-cancel" class="btn btn-default">
+              <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> <span id="relationship-label">Deny Friendship</span>
+            </a>            
+            {% endif %}
+    
+            {% if rel == "REVERSE_BLOCKED" %}
+            <a href="#" id="relationship-reverse-blocked"></a>
+            {% endif %}
+
           {% endif %}
-        </div>
-      </div>
+        </div> <!-- btn-group -->
+      </div> <!-- btn-toolbar -->
       
     </div> <!-- friends-toolbar -->
     
@@ -108,4 +146,36 @@
   </div> <!-- col-md-9 -->
 
 </div>
+{% endblock %}
+
+{% block end_body_js %}
+<script type="text/javascript">
+$(document).ready(function(){
+  $('#relationship-friends').mouseover(function() {
+    $(this).find('#relationship-label').text('Unfriend');
+    $(this).attr("class", "btn btn-default");
+  }).mouseout(function(){
+    $(this).find('#relationship-label').text('Friends');
+    $(this).attr("class", "btn btn-primary");
+  });            
+});
+$(document).ready(function(){
+  $('#relationship-blocked').mouseover(function() {
+    $(this).find('#relationship-label').text('Unblock');
+    $(this).attr("class", "btn btn-default");
+  }).mouseout(function(){
+    $(this).find('#relationship-label').text('Blocked');
+    $(this).attr("class", "btn btn-danger");
+  });            
+});
+$(document).ready(function(){
+  $('#relationship-friends-requested').mouseover(function() {
+    $(this).find('#relationship-label').text('Cancel Friend Request');
+    $(this).attr("class", "btn btn-danger");
+  }).mouseout(function(){
+    $(this).find('#relationship-label').text('Friendship Requested');
+    $(this).attr("class", "btn btn-primary");
+  });            
+});
+</script>
 {% endblock %}
