--- a/flaskbook/templates/user/profile.html
+++ b/flaskbook/templates/user/profile.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %} 
+{% from "user/_rel_button.html" import rel_button, rel_js %}
 
 {% block title %}{{ user.username }} - Profile{% endblock %} 
 
@@ -14,7 +15,7 @@
 
     <img class="img-thumbnail" src="{{ user.profile_imgsrc('xlg') }}" width="200" height="200" alt="{{ user.username }}">
 
-    <h3 class="profile-fullname">{{ user.first_name }} {{ user.last_name }} </h3>
+    <h3 class="profile-fullname">{{ user.first_name }} {{ user.last_name }}</h3>
     <h3 class="profile-username"><a href="{{ url_for('user_app.profile', username=user.username) }}" />@{{ user.username }}</a></h3>
 
   </div> <!-- col-md-3 -->
@@ -25,59 +26,15 @@
   
       <div class="btn-toolbar pull-right" role="toolbar" aria-label="friends-toolbar">
         <div class="btn-group" role="group" aria-label="friends-toolbar-buttons">
-          {% if edit_profile %}
-          <a href="{{ url_for('.edit') }}" role="button" class="btn btn-default">
-              <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit profile
-          </a>
-          {% else %}
-          
-            {% if rel == None %}
-            <a href="{{ url_for('relationship_app.add_friend', to_username=user.username) }}" role="button" id="relationship-add-friend" class="btn btn-default">
-              <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Friend
-            </a>  
-            <a href="{{ url_for('relationship_app.block', to_username=user.username) }}" role="button" class="btn btn-default">
-              <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Block
-            </a>  
-            {% endif %}
-            
-            {% if rel == "BLOCKED" %}
-            <a href="{{ url_for('relationship_app.unblock', to_username=user.username) }}" role="button" id="relationship-blocked" class="btn btn-danger">
-              <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> <span id="relationship-label">Blocked</span>
-            </a>
-            {% endif %}
-            
-            {% if rel == "FRIENDS_APPROVED" %}
-            <a href="{{ url_for('relationship_app.remove_friend', to_username=user.username) }}" role="button" id="relationship-friends" class="btn btn-primary">
-              <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> <span id="relationship-label">Friends</span>
-            </a>
-            {% endif %}
-
-            {% if rel == "FRIENDS_PENDING" %}
-            <a href="{{ url_for('relationship_app.remove_friend', to_username=user.username) }}" role="button" id="relationship-friends-requested" class="btn btn-primary">
-              <span class="glyphicon glyphicon-user" aria-hidden="true"></span> <span id="relationship-label">Friendship Requested</span>
-            </a>
-            {% endif %}
-
-            {% if rel == "REVERSE_FRIENDS_PENDING" %}
-            <a href="{{ url_for('relationship_app.add_friend', to_username=user.username) }}" role="button" id="relationship-reverse-friends-requested" class="btn btn-primary">
-              <span class="glyphicon glyphicon-user" aria-hidden="true"></span> <span id="relationship-label">Accept Friendship</span>
-            </a>
-            <a href="{{ url_for('relationship_app.remove_friend', to_username=user.username) }}" role="button" id="relationship-reverse-friends-cancel" class="btn btn-default">
-              <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> <span id="relationship-label">Deny Friendship</span>
-            </a>            
-            {% endif %}
-    
-            {% if rel == "REVERSE_BLOCKED" %}
-            <a href="#" id="relationship-reverse-blocked"></a>
-            {% endif %}
-
-          {% endif %}
+          {{ rel_button(rel, user) }}
         </div> <!-- btn-group -->
       </div> <!-- btn-toolbar -->
       
     </div> <!-- friends-toolbar -->
     
     <div class="row">
+      
+      {% if not friends_page %}
       
       <div class="col-md-9">
         
@@ -109,37 +66,59 @@
         
       </div> <!-- col-md-9 -->
     
-      <div class="col-md-3">
+      <div class="col-md-3"> <!-- Friends side bar -->
 
-        <h4><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Friends <span class="badge">4</span></h4>
+        <h4><span class="glyphicon glyphicon-user" aria-hidden="true"></span> 
+          <a href="{{ url_for('.profile-friends', username=user.username) }}">Friends</a>
+        <span class="badge">{{ friends_total }}</span></h4>
         
+        {% for friend in friends %}
         <div class="media">
           <div class="media-left">
-            <a href="#">
-              <img class="media-object" src="//placehold.it/50x50" width="50" heigh="50" alt="{{ user.username }}">
+            <a class="img-thumnbnail" href="{{ url_for('.profile', username=friend.to_user.username) }}">
+              <img class="media-object" src="{{ friend.to_user.profile_imgsrc('sm') }}" width="50" height="50" alt="{{ friend.to_user.username }}">
             </a>
           </div>
           <div class="media-body">
-            <p>Luis Escobar<br />
-              <a href="#">@luis</a>
+            <p>{{ friend.to_user.first_name }}<br />
+              <a href="{{ url_for('.profile', username=friend.to_user.username) }}">@{{ friend.to_user.username }}</a>
             </p>
           </div>
         </div> <!-- media -->
+        {% endfor %}
 
-        <div class="media">
-          <div class="media-left">
-            <a href="#">
-              <img class="media-object" src="//placehold.it/50x50" width="50" heigh="50" alt="{{ user.username }}">
-            </a>
-          </div>
-          <div class="media-body">
-            <p>Luis Escobar<br />
-              <a href="#">@luis</a>
-            </p>
-          </div>
-        </div> <!-- media -->
-
-      </div> <!-- col-md-3 -->
+      </div> <!-- Friends side bar -->
+      
+      {% else %}
+      
+      <div class="col-md-12"> <!-- == Friend list == -->
+      
+        <div class="row">
+          
+          {% for friend in friends.items %}
+          
+            <div class="col-md-3">
+              <div class="friend-grid-user-image">
+                <a class="img-thumbnail" href="{{ url_for('.profile', username=friend.to_user.username) }}">
+                  <img src="{{ friend.to_user.profile_imgsrc('lg') }}" width="75" alt="{{ friend.to_user.username }}">
+                </a>
+              </div>
+              <div class="friend-grid-user-data">
+                <h4 class="profile-fullname">{{ friend.to_user.first_name }} {{ friend.to_user.last_name }} </h5>
+                <h5 class="profile-username"><a href="{{ url_for('.profile', username=friend.to_user.username) }}">@{{ friend.to_user.username }}</a></h4>
+              </div>
+              <div class="friend-grid-user-friends-button">
+                {{ rel_button(friend.is_friend(logged_user), friend.to_user) }}
+              </div>
+            </div> <!-- col-md-3 -->
+            
+          {% endfor %}
+          
+        </div> <!-- row -->
+      
+      </div>
+      
+      {% endif %}
       
     </div> <!-- row -->
     
@@ -149,33 +128,5 @@
 {% endblock %}
 
 {% block end_body_js %}
-<script type="text/javascript">
-$(document).ready(function(){
-  $('#relationship-friends').mouseover(function() {
-    $(this).find('#relationship-label').text('Unfriend');
-    $(this).attr("class", "btn btn-default");
-  }).mouseout(function(){
-    $(this).find('#relationship-label').text('Friends');
-    $(this).attr("class", "btn btn-primary");
-  });            
-});
-$(document).ready(function(){
-  $('#relationship-blocked').mouseover(function() {
-    $(this).find('#relationship-label').text('Unblock');
-    $(this).attr("class", "btn btn-default");
-  }).mouseout(function(){
-    $(this).find('#relationship-label').text('Blocked');
-    $(this).attr("class", "btn btn-danger");
-  });            
-});
-$(document).ready(function(){
-  $('#relationship-friends-requested').mouseover(function() {
-    $(this).find('#relationship-label').text('Cancel Friend Request');
-    $(this).attr("class", "btn btn-danger");
-  }).mouseout(function(){
-    $(this).find('#relationship-label').text('Friendship Requested');
-    $(this).attr("class", "btn btn-primary");
-  });            
-});
-</script>
+{{ rel_js() }}
 {% endblock %}
