--- a/flaskbook/templates/user/profile.html
+++ b/flaskbook/templates/user/profile.html
@@ -38,7 +38,7 @@
       
       <div class="col-md-9">
         
-        {% if logged_user %}
+        {% if logged_user and (rel == "FRIENDS_APPROVED" or logged_user == user) %}
         <!-- post text input -->
         <div class="row feed-message">
           {% if error %}
@@ -57,31 +57,10 @@
         </div>
         {% endif %}
         
-        <div class="media">
-          <div class="media-left">
-            <a href="#">
-              <img class="media-object" src="//placehold.it/50x50" width="50" heigh="50" alt="{{ user.username }}">
-            </a>
-          </div>
-          <div class="media-body">
-            <p>Luis Escobar <a href="#">@luis</a><br />
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis non massa ut ante interdum sagittis. Quisque eu sapien enim. Phasellus sit amet viverra massa, sit amet rhoncus dui. Nam tortor justo, finibus ut gravida et, accumsan ac sapien. Integer nec commodo libero. Nam auctor vestibulum congue. Donec convallis mollis lorem, eu mattis sem luctus in. Curabitur tincidunt odio sit amet nulla fringilla, vel gravida orci aliquam. Donec viverra mollis tortor, a suscipit risus molestie at. Sed ut tincidunt metus. Maecenas nec dignissim velit, eget placerat lectus.
-            </p>
-          </div>
-        </div> <!-- media -->
-        
-        <div class="media">
-          <div class="media-left">
-            <a href="#">
-              <img class="media-object" src="//placehold.it/50x50" width="50" heigh="50" alt="{{ user.username }}">
-            </a>
-          </div>
-          <div class="media-body">
-            <p>Luis Escobar <a href="#">@luis</a><br />
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis non massa ut ante interdum sagittis. Quisque eu sapien enim. Phasellus sit amet viverra massa, sit amet rhoncus dui. Nam tortor justo, finibus ut gravida et, accumsan ac sapien. Integer nec commodo libero. Nam auctor vestibulum congue. Donec convallis mollis lorem, eu mattis sem luctus in. Curabitur tincidunt odio sit amet nulla fringilla, vel gravida orci aliquam. Donec viverra mollis tortor, a suscipit risus molestie at. Sed ut tincidunt metus. Maecenas nec dignissim velit, eget placerat lectus.
-            </p>
-          </div>
-        </div> <!-- media -->
+        {% from "feed/_feed_messages.html" import render_feed_message %}
+        {% for message in profile_messages %}
+          {{ render_feed_message(message) }}
+        {% endfor %}
         
       </div> <!-- col-md-9 -->
     
