añadida funcionalidad likes

--- a/flaskbook/templates/navbar.html
+++ b/flaskbook/templates/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="{{ url_for('home_app.home') }}">
                 <img alt="flaskbook logo" width="82" height="20" src="{{ url_for('static', filename='assets/flaskbook-logo-sm.png') }}">
             </a>
         </div>
