--- a/flaskbook/templates/user/profile.html
+++ b/flaskbook/templates/user/profile.html
@@ -49,6 +49,7 @@
           <form method="POST" action={{ url_for('feed_app.add_message') }} role="form">
             {{ form.hidden_tag() }}
             <div class="form-group">
+              {{ form.images(class='form-control') }}
               {{ form.post(class='form-control', rows=3) }}
             </div>
             <input type="hidden" name="to_user" value="{{ user.username }}">
