--- a/flaskbook/static/css/base.css
+++ b/flaskbook/static/css/base.css
@@ -10,7 +10,7 @@
 
 .profile-username {
     margin-top: 2px;
-    margin-bottom: 4px; 
+    margin-bottom: 4px;   
 }
 
 .friend-grid-user {
@@ -20,4 +20,29 @@
 
 .profile-friends-pagination {
     margin-top: 15px;
+}
+
+.media-user {
+    font-size: large;
+}
+
+.media-footer {
+    font-size: 0.9em;
+    color: #aaa;
+}
+
+.media-images {
+    margin: 10px 0 7px;
+}
+
+.feed-comment {
+    margin-top: 15px;
+}
+
+.feed-message.comments {
+    margin-top: 10px;
+}
+
+.media-footer-likes {
+    margin-top: 5px;
 }
