--- a/flaskbook/templates/feed/_feed_messages.html
+++ b/flaskbook/templates/feed/_feed_messages.html
@@ -1,10 +1,10 @@
 {% macro render_feed_message(message) %}
 <div class="media">
   <div class="media-left">
-    <a href="#">
+    <a href="{{ url_for('user_app.profile', username=message.from_user.username) }}">
       <img class="media-object" src="{{ message.from_user.profile_imgsrc('sm') }}" width="50" height="50" alt="{{ message.from_user.username }}">
     </a>
-  </div>
+  </div> <!-- media-left -->
   <div class="media-body">
     <div class="media-user-pane">
       <span class="media-user"><a href="{{ url_for('user_app.profile', username=message.from_user.username) }}">{{ message.from_user.first_name }} {{ message.from_user.last_name }}</a></span>
@@ -13,7 +13,28 @@
       {% endif %}
     </div>
     <div class="media-text">{{ message.text_linkified|safe }}</div>
-    <div class="media-footer">{{ message.human_timestamp }}</div>
+    {% if message.images %}
+    <div class="media-images">
+    {% for image in message.images %}
+      <img class="img-thumbnail" src="{{ message.post_imgsrc(image.ts, 'xlg') }}" width="{{ image.w }}" height="200" alt="" />
+    {% endfor %}
+    </div> <!-- media-images -->
+    {% endif %}
+    <div class="media-footer">
+      <a href="{{ url_for('feed_app.message', message_id=message.id) }}" class="media-timestamp">
+        {{ message.human_timestamp }}
+      </a> - 
+      <a href="{{ url_for('feed_app.message', message_id=message.id) }}#comment-form">Comment</a>
+      {% if message.comments %}({{ message.comments.count() }}){% endif %}
+       - <a href="{{ url_for('feed_app.like_message', message_id=message.id) }}">Like</a>
+      {% if message.likes %}
+      <div class="media-footer-likes">
+          <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+          {% set comma = joiner(", ") %}
+          {% for like in message.likes %}{{ comma() }}<a href="{{ url_for('user_app.profile', username=like.from_user.username) }}">{{ like.from_user.username }}</a>{% endfor %}
+      </div>
+      {% endif %}
+    </div>
   </div>
 </div> <!-- media -->
 {% endmacro %}
